--- a/classes.html
+++ b/classes.html
@@ -17,14 +17,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,600;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
-
+<span></span>
 <nav>
   <menu>
     <li> <a href="index.html" data-title="Home"><i class="fa-solid fa-house"></i></a></li>
     <li> <a href="classes.html" data-title="Classes"><i class="fa-solid fa-award"></i></a></li>
     <li> <a href="contact.html" data-title="Contact"><i class="far fa-address-card"></i></a></li>
     <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook"><i class="fa-brands fa-square-facebook"></i></a></li>
-    <!-- <li><a href="#" data-title="Instagram"><i class="fa-brands fa-instagram"></i></a></li> -->
+    <!-- <li><a href="#"data-title="Instagram"><i class="fa-brands fa-instagram"></i></a></li> -->
     <!-- <li><a href="#" data-title="Youtube"><i class="fa-brands fa-square-youtube"></i></a></li> -->
   </menu>
 </nav>
@@ -36,18 +36,23 @@
       <img class="pic2" src="images/dancemove.png" alt="">
 
       <div class="transbox" id="contact">
-      <h1>Zsolt Faskerti</h1>
+      <!-- <h1>Zsolt Faskerti</h1>
       <h3>Professional Ballroom and Latin Instructor</h3>
-      <h4>based in London, UK</h4>
+      <h4>based in London, UK</h4> -->
 
-      <h3>Contact:</h3>
-      <h3 id="mail">E-mail: faaskerti.zzsolt@gmail.com</h3>
+      <h3>Individual Classes</h3>
+      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. Curabitur consequat faucibus tellus at suscipit. </h4>
+
+       <h3>Group Classes</h3>
+       <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. Curabitur consequat faucibus tellus at suscipit. </h4>
+
+       <h3>Wedding Dance Classes</h3>
+      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. Curabitur consequat faucibus tellus at suscipit. </h4>
 
       </div>
 
-        <img class="ornament2" src="images/ornament.png" alt="ornament">
-
-  </div>
+        <img class="ornament3" src="images/ornament.png" alt="ornament">
+</div>
 
   <footer>
     <p>Copyright &copy; <script>document.write(/\d{4}/.exec(Date())[0])</script><span id="init"> ZF</span></p>
