--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
 <nav>
   <menu>
-    <li> <a href="index.html"><i class="fa-solid fa-house"></i></a></li>
-    <li> <a href="contact.html"><i class="far fa-address-card"></i></a></li>
-    <li><a href="https://www.facebook.com/faskerti.zsolt"><i class="fa-brands fa-square-facebook"></i></a></li>
-    <!-- <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
-    <!-- <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li> -->
+    <li> <a href="index.html" data-title="Home"><i class="fa-solid fa-house"></i></a></li>
+    <li> <a href="classes.html" data-title="Classes"><i class="fa-solid fa-award"></i></a></li>
+    <li> <a href="contact.html" data-title="Contact"><i class="far fa-address-card"></i></a></li>
+    <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook"><i class="fa-brands fa-square-facebook"></i></a></li>
+    <!-- <li><a href="#" data-title="Instagram"><i class="fa-brands fa-instagram"></i></a></li> -->
+    <!-- <li><a href="#" data-title="Youtube"><i class="fa-brands fa-square-youtube"></i></a></li> -->
   </menu>
 </nav>
 
