--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
     <li> <a href="index.html" data-title="Home"><i class="fa-solid fa-house"></i></a></li>
     <li> <a href="classes.html" data-title="Classes"><i class="fa-solid fa-award"></i></a></li>
     <li> <a href="contact.html" data-title="Contact"><i class="far fa-address-card"></i></a></li>
-    <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook"><i class="fa-brands fa-square-facebook"></i></a></li>
-    <!-- <li><a href="#" data-title="Instagram"><i class="fa-brands fa-instagram"></i></a></li> -->
-    <!-- <li><a href="#" data-title="Youtube"><i class="fa-brands fa-square-youtube"></i></a></li> -->
+    <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+    <!-- <li><a href="#" data-title="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li> -->
+    <!-- <li><a href="#" data-title="Youtube" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li> -->
   </menu>
 </nav>
 
