--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,600;1,700&display=swap" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -24,9 +26,6 @@
     <li> <a href="index.html" data-title="Home"><i class="fa-solid fa-house"></i></a></li>
     <li> <a href="classes.html" data-title="Classes"><i class="fa-solid fa-award"></i></a></li>
     <li> <a href="contact.html" data-title="Contact"><i class="far fa-address-card"></i></a></li>
-    <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
-    <!-- <li><a href="#" data-title="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li> -->
-    <!-- <li><a href="#" data-title="Youtube" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li> -->
   </menu>
 </nav>
 
@@ -44,14 +43,14 @@
 
        <h4>based in London, UK</h4>
 
-          <h4>Zsolt has been dancing for over 20 years and continues to improve himself by participating in national and international competitions.
+           <h4>  Zsolt has been dancing for over 20 years and continues to improve himself by participating in national and international competitions.
            He holds the Hungarian Latin show dance national champion title and has competed in over 28 countries around the world at the highest level.
            He has experience teaching students from their first step on the dance floor to competitive dancers. Zsolt is ready to share his knowledge and passion for dancing with greater emphasis in coordination, technique and styling.</h4>
 
            <h3 id="current">Improvers Group Class - Technique Latin<br>Every Thursday at 18.15<br>Start 19th of January 2023<br>Dilly Hotel, 21 Piccadilly W1J 0BH London</h3>
 
            <!-- <h3>Please follow <a href="https://www.facebook.com/faskerti.zsolt"><i class="fa-brands fa-square-facebook" id="min"></i></a>  for updates about new group classes.</h3> -->
-          <h3>Please <a href="contact.html">contact</a> for group or individual classes - all levels (Beginner, Improver, Advanced)</h3>
+           <h3>Please <a href="contact.html">contact</a> for group or individual classes - all levels (Beginner, Improver, Advanced)</h3>
         </div>
   </div>
 
@@ -81,8 +80,13 @@
   </div>
 
   <footer>
+    <div class="socialfooter">
+      <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+      <li><a href="#" data-title="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="#" data-title="Youtube" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li>
+    </div>
+
     <p>Copyright &copy; <script>document.write(/\d{4}/.exec(Date())[0])</script><span id="init"> ZF</span></p>
-       <!-- Made with<span id="vibes">🎶</span> -->
   </footer>
 
  </body>
