--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,600;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
 </head>
 
 <nav>
@@ -23,9 +24,6 @@
     <li> <a href="index.html" data-title="Home"><i class="fa-solid fa-house"></i></a></li>
     <li> <a href="classes.html" data-title="Classes"><i class="fa-solid fa-award"></i></a></li>
     <li> <a href="contact.html" data-title="Contact"><i class="far fa-address-card"></i></a></li>
-    <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
-    <!-- <li><a href="#" data-title="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li> -->
-    <!-- <li><a href="#" data-title="Youtube" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li> -->
   </menu>
 </nav>
 
@@ -46,12 +44,16 @@
       </div>
 
         <img class="ornament2" src="images/ornament.png" alt="ornament">
-
-  </div>
+</div>
 
   <footer>
+    <div class="socialfooter">
+      <li><a href="https://www.facebook.com/faskerti.zsolt" data-title="Facebook" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+      <li><a href="#" data-title="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="#" data-title="Youtube" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li>
+    </div>
+
     <p>Copyright &copy; <script>document.write(/\d{4}/.exec(Date())[0])</script><span id="init"> ZF</span></p>
-     <!-- Made with<span id="vibes">🎶</span> -->
   </footer>
 
 </body>
