--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="a">
       <img class="pict" src="images/profileaa.png" alt="">
-      <p class="quote">"Zsolt's attunement is phenomenal, his attention to detail and creativity, his very friendly and cheerful attitude make him an awesome dance partner and coach."<br>Alicia V.</p>
+      <p class="quote">"Zsolt's attunement is phenomenal, his attention to detail and creativity, his very friendly and cheerful attitude make him an awesome dance partner and coach."<br>Alice V.</p>
 
    </div>
 
