--- a/classes.html
+++ b/classes.html
@@ -40,13 +40,13 @@
       <h4>based in London, UK</h4> -->
 
       <h3>Individual Classes</h3>
-      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. Curabitur consequat faucibus tellus at suscipit. </h4>
+      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. </h4>
 
        <h3>Group Classes</h3>
-       <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. Curabitur consequat faucibus tellus at suscipit. </h4>
+       <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. </h4>
 
        <h3>Wedding Dance Classes</h3>
-      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. Curabitur consequat faucibus tellus at suscipit. </h4>
+      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. </h4>
 
       </div>
 
