--- a/classes.html
+++ b/classes.html
@@ -32,21 +32,18 @@
 
   <div class="about">
 
-      <img class="pic2" src="images/dancemove.png" alt="">
+      <img class="pic2" src="images/dancemove.png" alt="latin dance">
 
       <div class="transbox" id="contact">
-      <!-- <h1>Zsolt Faskerti</h1>
-      <h3>Professional Ballroom and Latin Instructor</h3>
-      <h4>based in London, UK</h4> -->
 
       <h3>Individual Classes</h3>
-      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. </h4>
+      <h4>We will take it from where you are, focusing on your specific goals, adjusting every lesson tailor-made for you as we go.</h4>
 
        <h3>Group Classes</h3>
-       <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. </h4>
+       <h4>You are welcome to join any time, here we practice solo choreographies with focus on detail and techniques of latin dance.</h4>
 
        <h3>Wedding Dance Classes</h3>
-      <h4>Sed nisi mi, commodo et urna eget, porta commodo quam. Nunc aliquam sollicitudin lacinia. Cras vel orci quis odio lobortis sagittis sed eu ante. </h4>
+      <h4>Let's create a beautiful choreography for your big day. I'd like you to love it so much that you would want to be dancing it every day ever after ;) </h4>
 
       </div>
 
