--- a/classes.html
+++ b/classes.html
@@ -37,7 +37,7 @@
       <div class="transbox" id="contact">
 
       <h3>Individual Classes</h3>
-      <h4>We will take it from where you are, focusing on your specific goals, adjusting every lesson tailor-made for you as we go.</h4>
+      <h4>We will take it from where you are, focusing on your specific goals, adjusting every lesson tailor-made for you as we go. Let's get started!</h4>
 
        <h3>Group Classes</h3>
        <h4>You are welcome to join any time, here we practice solo choreographies with focus on detail and techniques of latin dance.</h4>
