--- a/classes.html
+++ b/classes.html
@@ -40,7 +40,7 @@
       <h4>We will take it from where you are, focusing on your specific goals, adjusting every lesson tailor-made for you as we go. Let's get started!</h4>
 
        <h3>Group Classes</h3>
-       <h4>You are welcome to join any time, here we practice solo choreographies with focus on detail and techniques of latin dance.</h4>
+       <h4>You are welcome to join any time, here we practice solo choreographies with focus on detail and technique of latin dance.</h4>
 
        <h3>Wedding Dance Classes</h3>
       <h4>Let's create a beautiful choreography for your big day. I'd like you to love it so much that you would want to be dancing it every day ever after ;) </h4>
